[tool.poetry]
name = "zeus-collector"
version = "0.1.0"
description = "Data collector module for MetaProject Zeus"
authors = ["Petr Balnar <petr.balnar@seznam.cz>"]
readme = "README.md"
packages = [{ include = "collector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.0"
httpx = "^0.27.0"
rich = "^13.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"